--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+
+    //Zoom RecyclerView
+    implementation 'com.github.Spikeysanju:ZoomRecylerLayout:1.0'
 }
