--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Spieler"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.ShowAllUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ShowAllPostsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.ShowAllBlogsActivity"
             android:exported="false" />
         <activity
